iteration 1 really complete

--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -15,7 +15,7 @@
   </div>
   <div class="mb-3">
     <label for="passwordRepeat" class="form-label">Repeat Password</label>
-    <input type="password" class="form-control" id="passwordRepeat" name="passwordRepeat" value="{{passwordRepeat}}">
+    <input type="password" class="form-control" id="passwordRepeat" name="passwordRepeat" value="{{password}}">
   </div>
   <button type="submit" class="btn btn-primary">Register User</button>
 </form>
