--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,13 +1,17 @@
 <form action="/login" method="POST" class="mx-auto w-50">
-
+{{#if errorMessage}}
+<div class="alert alert-danger" role="alert">
+  {{errorMessage}}
+</div>
+{{/if}}
 
   <div class="mb-3">
     <label for="username" class="form-label">Username</label>
-    <input type="text" class="form-control" id="username" name="username">
+    <input type="text" class="form-control" id="username" name="username" value="{{username}}">
   </div>
   <div class="mb-3">
     <label for="password" class="form-label">Password</label>
-    <input type="password" class="form-control" id="password" name="password">
+    <input type="password" class="form-control" id="password" name="password" value="{{password}}">
   </div>
   <button type="submit" class="btn btn-primary">Login User</button>
 </form>
