--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,1 +1,4 @@
-profile page!!! user is {{username}}
+<p>profile page!!! user is {{username}}</p>
+<a href="/main">Link to "main"</a>
+<br>
+<a href="/private">Private link</a>
